tests/invalid/list_magic_imul_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1]
    xs.__imul__(1.5)


if __name__ == "__main__":
    run_case()
